--- a/CatchMe/Storyboard.storyboard
+++ b/CatchMe/Storyboard.storyboard
@@ -5,11 +5,11 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1498"/>
     </dependencies>
     <scenes>
-        <!--Table View Controller - Settings-->
+        <!--Settings View Controller - Settings-->
         <scene sceneID="MxX-lM-8tb">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Q2T-pK-Wnq" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <tableViewController id="2NF-G3-eGS" sceneMemberID="viewController">
+                <tableViewController id="2NF-G3-eGS" customClass="SettingsViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="static" style="grouped" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="fMN-b1-tGW">
                         <rect key="frame" x="0.0" y="20" width="320" height="411"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -134,6 +134,9 @@
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
+                                        <connections>
+                                            <segue destination="pEu-Do-eZW" kind="modal" modalTransitionStyle="flipHorizontal" id="fuG-6c-fBS"/>
+                                        </connections>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -167,18 +170,25 @@
                                     <navigationItem title="Emergency Contacts" id="Ajv-Wf-1gp">
                                         <barButtonItem key="leftBarButtonItem" systemItem="done" id="9J7-Mu-1BF">
                                             <connections>
-                                                <action selector="goMainMenu" destination="hvv-My-3HZ" id="YDv-ml-C4g"/>
+                                                <action selector="goMainMenu" destination="jhO-ni-0Sf" id="JUe-1i-s9x"/>
                                             </connections>
                                         </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="txtNumber" borderStyle="roundedRect" minimumFontSize="17" id="STi-PI-C6G">
-                                <rect key="frame" x="20" y="106" width="97" height="31"/>
+                                <rect key="frame" x="131" y="73" width="169" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="SMS Number" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="3l4-t2-3FK">
+                                <rect key="frame" x="20" y="78" width="103" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -186,7 +196,7 @@
                     <nil key="simulatedBottomBarMetrics"/>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="860" y="-352"/>
+            <point key="canvasLocation" x="1039" y="820"/>
         </scene>
         <!--Audio Settings View Controller-->
         <scene sceneID="qif-Mo-sdh">
@@ -208,6 +218,9 @@
                                 <state key="highlighted">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="recordSound" destination="gnr-17-nXI" eventType="touchUpInside" id="ciY-yS-uWn"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="kl2-rg-2ew">
                                 <rect key="frame" x="162" y="321" width="138" height="52"/>
@@ -220,6 +233,9 @@
                                 <state key="highlighted">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="stopSound" destination="gnr-17-nXI" eventType="touchUpInside" id="jbz-Ud-KwE"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Zfh-Mx-AP4">
                                 <rect key="frame" x="20" y="389" width="134" height="51"/>
@@ -232,6 +248,9 @@
                                 <state key="highlighted">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="playSound" destination="gnr-17-nXI" eventType="touchUpInside" id="Y1e-Nx-x9J"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="4yP-q9-h6f">
                                 <rect key="frame" x="162" y="389" width="138" height="51"/>
@@ -244,6 +263,9 @@
                                 <state key="highlighted">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="saveSound" destination="gnr-17-nXI" eventType="touchUpInside" id="4da-Xx-oIL"/>
+                                </connections>
                             </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Speak slowly and clearly into the microphone. Press play to review the recording before saving." lineBreakMode="wordWrap" numberOfLines="5" baselineAdjustment="none" minimumFontSize="10" adjustsFontSizeToFit="NO" id="rB3-ir-Qc4">
                                 <rect key="frame" x="18" y="236" width="285" height="90"/>
@@ -320,7 +342,7 @@
                     </connections>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="1108" y="237"/>
+            <point key="canvasLocation" x="1039" y="251"/>
         </scene>
         <!--Main View Controller - Main-->
         <scene sceneID="23g-cZ-Lmq">
@@ -400,6 +422,7 @@
         <class className="AudioSettingsViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/AudioSettingsViewController.h"/>
             <relationships>
+                <relationship kind="action" name="goMainMenu"/>
                 <relationship kind="action" name="playSound"/>
                 <relationship kind="action" name="playSound:"/>
                 <relationship kind="action" name="recordSound"/>
@@ -415,6 +438,15 @@
         </class>
         <class className="ContactsViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ContactsViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="goMainMenu"/>
+            </relationships>
+        </class>
+        <class className="SettingsViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SettingsViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="swOn" candidateClass="UISwitch"/>
+            </relationships>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
