--- a/CatchMe/Storyboard.storyboard
+++ b/CatchMe/Storyboard.storyboard
@@ -458,6 +458,39 @@
             <point key="canvasLocation" x="-368" y="-43"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="AudioSettingsViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AudioSettingsViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="defaultSound"/>
+                <relationship kind="action" name="goMainMenu"/>
+                <relationship kind="action" name="playSound"/>
+                <relationship kind="action" name="playSound:"/>
+                <relationship kind="action" name="recordSound"/>
+                <relationship kind="action" name="recordSound:"/>
+                <relationship kind="action" name="saveSound"/>
+                <relationship kind="action" name="stopSound"/>
+                <relationship kind="action" name="stopSound:"/>
+                <relationship kind="outlet" name="defaultButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="playButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="recordButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="saveButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="stopButton" candidateClass="UIButton"/>
+            </relationships>
+        </class>
+        <class className="ContactsViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ContactsViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="goMainMenu"/>
+            </relationships>
+        </class>
+        <class className="SettingsViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SettingsViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="swOn" candidateClass="UISwitch"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
